<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingLeft="30dp">

        <!-- normal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_text"
            android:textSize="17sp"
            android:textStyle="normal" />

        <!-- italic -->

    <!-- bold -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italic_text"
        android:textAppearance="@style/TextAppearance"
        android:textSize="17sp"
        android:textStyle="italic" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bold_text"
            android:textAppearance="@style/TextAppearance"
            android:textSize="17sp"
            android:textStyle="bold" />

        <!-- bold + italic -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bold_italic_text"
            android:textAppearance="@style/TextAppearance"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

        <!-- Programmatically set font view -->
        <TextView
            android:id="@+id/text_programmatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programmatical_font_text"
            android:textSize="17sp" />

        <!-- layout defined font -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_font_text"
            android:textSize="17sp"
            android:textStyle="bold" />

</LinearLayout>
